# snake

./: .gitmodules  Makefile  README.md  config.toml  shell.nix  snake.cabal
app/: Main.hs
data/programs/outline/: fragment.glsl  vertex.glsl
data/programs/solid/: fragment.glsl  vertex.glsl
data/programs/texture/: fragment.glsl  vertex.glsl
haskell.nix/: default.nix
nix/: deps.nix  packages.nix
src/: Snake.hs
src/Graphics/Rendering/OpenGL/: Extra.hs
src/Snake/: Components.hs  Config.hs  Draw.hs  Events.hs  Game.hs  Lib.hs  MainLoop.hs  Math.hs  Scene.hs  System.hs  Tick.hs  Window.hs
src/Snake/Components/: Programs.hs  Textures.hs
src/Snake/Components/Block/: Draw.hs  Types.hs
src/Snake/Components/Delayed/: System.hs  Types.hs
src/Snake/Components/Field/: Draw.hs  System.hs  Types.hs
src/Snake/Components/Food/: Draw.hs  System.hs  Types.hs
src/Snake/Components/Level/: System.hs
src/Snake/Components/Snake/: Draw.hs  System.hs  Types.hs
src/Snake/Components/Time/: System.hs  Types.hs
src/Snake/Programs/: Solid.hs  Sprite.hs  Textured.hs
