cabal-version:       3.0
name:                snake
version:             0.1.0.0
synopsis:            Snake game
description:         A simple snake game
license:             BSD3
license-file:        LICENSE
author:              Vasiliy Yorkin
maintainer:          vasiliy.yorkin@gmail.com
copyright:           2020 Vasiliy Yorkin
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/vyorkin/snake.git

library
  hs-source-dirs:      src
  exposed-modules:     Snake
  build-depends:       base ^>= 4.13

                     , text ^>= 1.2
                     , utf8-string ^>= 1.0
                     , bytestring ^>= 0.10
                     
                     , contravariant ^>= 1.5
                     , invariant ^>= 0.5

                     , containers ^>= 0.6
                     , transformers ^>= 0.5
                     , mtl ^>= 2.2

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns
                       NoStarIsType

executable snake
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , snake
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns
