cabal-version:       2.4
-- cabal 3.0 is not supported by Stack yet
-- see: https://github.com/haskell/haskell-ide-engine/issues/1564
-- also it is not supported by haskell.nix
-- see: https://github.com/haskell/cabal/issues/4899
name:                snake
version:             0.1.0.0
synopsis:            Snake game
description:         A simple snake game
license:             MIT
license-file:        LICENSE
author:              Vasiliy Yorkin
maintainer:          vasiliy.yorkin@gmail.com
copyright:           2020 Vasiliy Yorkin
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/vyorkin/snake.git

library
  hs-source-dirs:      src
  exposed-modules:     Snake
                       Snake.Game
                       Snake.MainLoop
                       Snake.Config
                       Snake.Window
                       Snake.Scene
                       Snake.Tick
                       Snake.Draw
                       Snake.Events

                       Snake.Components
                         Snake.Components.Time.Types
                         Snake.Components.Time.System

                         Snake.Components.Snake.Types
                         Snake.Components.Snake.System
                         Snake.Components.Snake.Draw

                         -- Snake.Components.Food
                         -- Snake.Components.Hole
                         -- Snake.Components.Bomb

                       Graphics.Rendering.OpenGL.Extra

  build-depends:       base ^>= 4.13
                     , text ^>= 1.2
                     , bytestring ^>= 0.10
                     , containers ^>= 0.6
                     , unordered-containers ^>= 0.2
                     , vector ^>= 0.12
                     , linear ^>= 1.20
                     , sdl2 ^>= 2.5
                     , sdl2-image ^>= 2.0
                     , OpenGL ^>= 3.0
                     , StateVar ^>= 1.2
                     , mwc-probability ^>= 2.2
                     , apecs ^>= 0.9

                       -- sumbodule in vendors/apecs-random
                     , apecs-random

                     , tomland ^>= 1.2

                     , lens ^>= 4.18
                     , filepath ^>= 1.4
                     , directory ^>= 1.3

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns
                       NoStarIsType
                       BlockArguments

executable snake
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , snake
  ghc-options:         -Wall
                       -threaded
                       -eventlog
                       -rtsopts
                       -with-rtsopts=-N
                       -with-rtsopts=-qn1
                       -with-rtsopts=-A128m
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns
